--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@graphprotocol/grc-20": "^0.21.3",
     "@graphprotocol/hypergraph": "0.0.10",
     "@graphprotocol/hypergraph-react": "0.0.10",
     "@tailwindcss/vite": "^4.1.8",
