--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@graphprotocol/grc-20": "^0.21.3",
     "@graphprotocol/hypergraph": "0.0.12",
     "@graphprotocol/hypergraph-react": "0.0.12",
+    "@radix-ui/react-navigation-menu": "^1.2.13",
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/vite": "^4.1.8",
     "@tanstack/react-query": "^5.79.2",
