--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@graphprotocol/hypergraph-react": "0.0.12",
     "@radix-ui/react-navigation-menu": "^1.2.13",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.2.7",
     "@tailwindcss/vite": "^4.1.8",
     "@tanstack/react-query": "^5.79.2",
     "@tanstack/react-router": "^1.120.15",
